SAK-16618 WebDAV lock protocol compliance plus minor code cleanup
git-svn-id: https://source.sakaiproject.org/svn/dav/trunk@64141 66ffb92e-73f9-0310-93c1-f5514f145a0a